--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
-*/bin/Debug
-*/bin/Release
-*/obj/Debug
-*/obj/Release
-*/.vs
+# Build outputs for any project
+**/bin/
+**/obj/
+
+# Visual Studio workspace
+.vs/
+**/.vs/
